improve swagger and added generic response
