# app/controllers/bread.controller.js
@@ -1,41 +1,48 @@
 const db = require("../models");
+const { success, error } = require("../models/response");
 const { uuid } = require('uuidv4');
 const Bread = db.breads;
-const Op = db.Sequelize.Op;
 
-// Retrieve all breads from the database.
 exports.findAll = (req, res) => {
-/* #swagger.tags = ['Breads']
-   #swagger.description = 'Endpoint to list breads' */
-/* #swagger.parameters['obj'] = {
+  /*
+   #swagger.tags = ['Breads']
+   #swagger.responses[200] = {
+    description: 'Success',
+    schema: { $ref: '#/definitions/BreadsResponse' }
+    }
+  */
+  Bread.findAll()
+    .then(data => {
+      res
+        .status(200)
+        .send(success(data, res.statusCode));
+    })
+    .catch(err => {
+      res
+        .status(500)
+        .send(error("Some error occurred while retrieving breads.", res.statusCode));
+    });
+};
+
+exports.create = (req, res) => {
+  /*
+   #swagger.tags = ['Breads']
+   #swagger.parameters['obj'] = {
     in: 'body',
     description: 'Bread',
     required: true,
       schema: { $ref: "#/definitions/AddBread" }
-    } */
-/* #swagger.responses[200] = {
-    description: 'Breads successfully obtained.',
-    schema: { $ref: '#/definitions/Bread' }
-    } */
-  Bread.findAll()
-    .then(data => {
-      res.status(200).send(data);
-    })
-    .catch(err => {
-      res.status(500).send({
-        message:
-          err.message || "Some error occurred while retrieving tutorials."
-      });
-    });
-};
-
-// Create and Save a new Bread
-exports.create = (req, res) => {
+    }
+   #swagger.responses[200] = {
+    description: 'Success',
+    schema: { $ref: '#/definitions/AddBreadResponse' }
+    }
+  */
   if (!req.body.name) {
-    res.status(400).send({
-      message: "Content can not be empty!"
-    });
-    return;
+    res
+      .status(400)
+      .send(error("Content can not be empty!", res.statusCode));
+    return
   }
   const bread = {
     uuid: uuid(),
@@ -47,60 +54,87 @@ exports.create = (req, res) => {
   // Save Bread in the database
   Bread.create(bread)
     .then(data => {
-      res.send(data);
+      res
+        .status(200)
+        .send(success(data, res.statusCode));
     })
     .catch(err => {
-      res.status(500).send({
-        message:
-          err.message || "Some error occurred while adding a new Bread."
-      });
+      res
+        .status(500)
+        .send(error("Some error occurred while adding a new Bread.", res.statusCode));
     });
 };
 
 // Update Bread
 exports.update = (req, res) => {
+  /*
+   #swagger.tags = ['Breads']
+   #swagger.parameters['obj'] = {
+    in: 'body',
+    description: 'Bread',
+    required: true,
+      schema: { $ref: "#/definitions/AddBread" }
+    }
+   #swagger.responses[200] = {
+    description: 'Success',
+    schema: { $ref: '#/definitions/AddBreadResponse' }
+    }
+  */
   const uuid = req.params.uuid;
   Bread.update(req.body, {
     where: { uuid: uuid}
   })
     .then(num => {
       if (num == 1) {
-        res.send({
-          message: "Bread updated"
-        });
+        Bread.findByPk(uuid)
+          .then(data => {
+            res
+              .status(200)
+              .send(success(data, res.statusCode));
+          })
       } else {
-        res.send({
-          message: "Cannot update Bread, not valid body"
-        });
+        res
+          .status(400)
+          .send(error("Cannot update Bread, not valid body", res.statusCode));
       }
     })
     .catch(err => {
-      res.status(500).send({
-        message: "Error updating Bread"
-      })
+      res
+        .status(500)
+        .send(error("Error updating Bread", res.statusCode))
     });
 };
 
 // Delete Bread
 exports.delete = (req, res) => {
+  /*
+   #swagger.tags = ['Breads']
+   #swagger.responses[200] = {
+    description: 'Success',
+    }
+   #swagger.responses[200] = {
+    description: 'Success',
+    schema: { $ref: '#/definitions/Response' }
+    }
+  */
   const uuid = req.params.uuid;
   Bread.destroy({
     where: { uuid: uuid }
   })
     .then(num => {
       if (num == 1) {
-        res.send({
-          message: "Bread deleted"
-        });
+        res
+          .status(200)
+          .send(success());
       } else {
-        res.send({
-          message: "Cannot delete Bread"
-        });
+        res
+          .status(400)
+          .send(error("Cannot delete Bread", res.statusCode));
       }
     })
     .catch(err => {
-      res.status(500).send({
-        message: "Error deleting Bread"
-      })
+      res
+        .status(500)
+        .send(error("Error deleting Bread", res.statusCode))
     });
 };
